# p_yuqi

./: .gitignore  pyproject.toml
src/p_yuqi/: .env.example  ai.py  bot.py  core_and_writer.py
