[project]
name = "p-yuqi"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodion-AI",email = "lidofgen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "openai (>=2.8.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "p_yuqi", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
